--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
+<div class="row">
+    <div class="page-header">
+      <div class="d-flex align-items-center">
+          <h2 class="page-header-title">Dashboard</h2>
+          <div>
+          <div class="page-header-tools">
+              <a class="btn btn-gradient-01" href="#">Add Widget</a>
+          </div>
+          </div>
+      </div>
+    </div>
+</div>
 <h1>Welcome to Taskr</h1>
 <p>Helping you increase your prductivity</p>
+<a href="/about">About</a>
